fluxcd/infrastructure/controllers/overlays/production/adguard/deployment-sync-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome-sync
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
      - name: jcr-pcfae-dungeon-pull-secret
      containers:
      - name: adguardhome-sync
        image: docker.jcr.pcfae.com/linuxserver/adguardhome-sync:latest
