fluxcd/infrastructure/controllers/overlays/production/adguard/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard
  namespace: prplanit-dns
spec:
  template:
    spec:
