fluxcd/infrastructure/controllers/overlays/production/adguard/namespace-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: adguard
  namespace: compass
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: compass
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: compass
